# yaqd-watchdog

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-mypy.yml  python-pytest.yml  run-entry-points.yml
tests/online_check/: fake-sensor-config.toml  test_online.py  watchdog-config.toml
yaqd_watchdog/: __init__.py  _watchdog.py  watchdog.avpr  watchdog.toml
